--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -20,6 +22,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.45.4",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "tailwind-merge": "^1.14.0",
@@ -54,6 +57,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.34",
+    "@types/redux": "^3.6.31",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17"
