--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@
 .env.test.local
 .env.production.local
 
+# Ignore environment variable files
+.env
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
